--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <td>JAVASCRIPT Task 6</td> <td><a href="./js_6.html">task6 link</a></td>
     </tr>
     <tr>
-        <td>JAVASCRIPT Task 7</td> <td><a href="./js_7.html">task7 link</a></td>
+        <td>JAVASCRIPT Task 7</td> <td><a href="./jss_7.html">task7 link</a></td>
     </tr>
 
    
